@@ -9,6 +9,8 @@
 '''
 
 main_link = 'https://www.fashiontv.com/'
+main_hash = '4fpgggl6py'
+main_json = 'https://cdn2.castify.ai/files/feed/{}.json'.format(main_hash)
 fashion_tv_yt_channel = 'UCqzju-_WMKsgNx8R3QwupQQ'
 ftv_yt_channel = 'UClnblsrZrugJfFs4ANPgNcA'
 ftv_hot_yt_channel = 'UCDN6BTcfgHDuBQgCgXkU-cA'
@@ -16,7 +18,7 @@ ftv_parties_yt_channel = 'UCLiyW3PZFDSxIw6EES8MneQ'
 ftv_asia_yt_channel = 'UCC2Iic6b-nhY7CSRUm_nyng'
 ftv_news_channel = 'UCi12i9eiWFh67T-uCP1y7Gw'
 scramble = (
-    'eJwVy8EKgjAAANBfiZ1TmnM6u4lFhUGEqXgKnctk04lbK43+Pby/9wWK0ZFpsF2BNFAHAt+5yz7mxptOpfE1d3EB1itQDu2ds2lh4Wkuky'
-    'lSIrqQc4aS+RhyQp+WyGK8Hwu+q7nXTWRZbb0E38MOdDBEAUIWbA19aFcbLDjkTuebTcXECD0iKuNJ3y6HQdmNlI1gL8VGKnvNem1T2YHf'
-    'H4uyN8w='
+    'eJwVzNEKgjAUANBfiT2XmLqlvUlBCWLZKMqXsfRmatvMzcKifw8/4Jwvqgq0nCDsE7IgCx97tjOramhqt+Ydlrh4dWUDtu5z8mqMEPrpFhZvW22VSp'
+    'UP6DV0uZIGpLFyJdB0gnhbsQaGsQ2jD6dDuA+SWASJ2ToFDBn47vt4pfzmzTO5ES4LR6Uh78CMaLNb0f155hC2NXHq0yzCAWXpXcnLOTwFbN0f0O8P'
+    '4Xs7zw=='
 )
