@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<settings>
+    <category label="30008">
+        <setting visible="true" label="30002" type="action" action="RunPlugin(plugin://$ID/?action=clear_cache)"/>
+    </category>
+</settings>
