@@ -1,3 +1,9 @@
+[B]2.0.X[/B]
+- Update for new website design
+- Add search function
+- Add shortcut to live channels
+- New Youtube API keys
+
 [B]1.3.X[/B]
 - Change cache method
 - Place youtube channels on submenu
